--- a/src/app/client/accueil/accueil.component.html
+++ b/src/app/client/accueil/accueil.component.html
@@ -7,11 +7,11 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="a-propos"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
+    <a href="contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
     <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
     <a href="/" class="active-nav"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
-    <a href="/parametre" class="active-nav"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
+    <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
     </div>
   <div class="page-content">
   <div class="page-title page-title-large">
