--- a/src/app/client/formation/formation.component.html
+++ b/src/app/client/formation/formation.component.html
@@ -1,1 +1,106 @@
-<p>formation works!</p>
+<div class="header header-fixed header-auto-show header-logo-app">
+  <a href="#0" class="header-title">AMS</a>
+  <a href="#" data-menu="menu-main" class="header-icon header-icon-1"><i class="fas fa-bars"></i></a>
+  <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-dark"><i class="fas fa-sun"></i></a>
+  <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-light"><i class="fas fa-moon"></i></a>
+  <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
+  </div>
+  <div id="footer-bar" class="footer-bar-5">
+    <a href="/contact"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+    <a href="/telechargement"  ><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
+    <a href="/"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
+    <a href="formation" class="active-nav"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
+    <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
+    </div>
+    <div class="card header-card shape-rounded" data-card-height="140">
+      <div class="card-overlay bg-highlight opacity-95"></div>
+      <div class="card-overlay dark-mode-tint"></div>
+      <div class="card-bg preload-img" data-src="images/pictures/20s.jpg"></div>
+      </div>
+  <div class="page-content">
+  <div class="page-title page-title-large">
+  <h2 data-username="Bienvenue" class="greeting-text"></h2>
+  <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
+  </div>
+<div class="content">
+  <div class="search-box bg-theme rounded-m shadow-xl bottom-0">
+  <i class="fa fa-search"></i>
+  <input type="text" class="border-0" placeholder="Rechercher les logiciels dont vous avez besoins " data-search>
+  </div>
+  <div class="search-results disabled-search-list card card-style mx-0 mt-3 px-2">
+  <div class="list-group list-custom-large">
+  <a href="/telechargement/sage-comptabilite" data-filter-item data-filter-name="sage comptabilite">
+  <i class="fa fa-file-video font-17"></i>
+  <span>Sage Comptabilite</span>
+  <strong>Logiciel</strong>
+  <i class="fa fa-angle-right mr-2"></i>
+  </a>
+
+  </div>
+  </div>
+  </div>
+
+  <div class="row mb-0">
+      <div class="col-6 pr-0">
+      <div class="card card-style">
+      <img src="assets/images/L_SAGE_Bright_Green4.png" class="img-fluid">
+      <div class="content pb-0">
+      <p><a href="/formation/sage-comptabilite" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      </div>
+      </div>
+      </div>
+      <div class="col-6 pl-0">
+      <div class="card card-style">
+      <img src="assets/images/word.jpg" class="img-fluid">
+      <div class="content pb-0">
+      <p><a href="/formation/word" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      </div>
+      </div>
+      </div>
+  </div>
+
+
+
+  <div class="divider divider-margins"></div>
+  <div class="content mb-3">
+  <h5 class="float-left font-16 font-500">Browse Our Categories</h5>
+  <a class="float-right font-12 color-highlight mt-n1" href="#">View All</a>
+  <div class="clearfix"></div>
+  </div>
+  <a href="#" data-card-height="80" class="card card-style mb-3">
+  <div class="card-center">
+  <h5 class="pl-3">Mobile PWA's</h5>
+  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
+  </div>
+  <div class="card-center opacity-30">
+  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+  </div>
+  </a>
+  <a href="#" data-card-height="80" class="card card-style mb-3">
+  <div class="card-center">
+  <h5 class="pl-3">Site Templates</h5>
+  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
+  </div>
+  <div class="card-center opacity-30">
+  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+  </div>
+  </a>
+  <a href="#" data-card-height="80" class="card card-style mb-4">
+  <div class="card-center">
+  <h5 class="pl-3">Web Themes</h5>
+  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
+  </div>
+  <div class="card-center opacity-30">
+  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+  </div>
+  </a>
+  <div class="divider divider-margins"></div>
+  <div class="footer" data-menu-load="assets/menu-footer.html"></div>
+</div>
+
+<div id="menu-share" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-share.html" data-menu-height="420" data-menu-effect="menu-over">
+</div>
+<div id="menu-highlights" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-colors.html" data-menu-height="510" data-menu-effect="menu-over">
+</div>
+<div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-settings" data-menu-effect="menu-over">
+</div>
