--- a/src/app/client/contact/contact.component.html
+++ b/src/app/client/contact/contact.component.html
@@ -6,7 +6,7 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="a-propos" class="active-nav"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
+    <a href="contact" class="active-nav"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
     <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
     <a href="/" ><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
@@ -14,7 +14,7 @@
     </div>
 <div class="page-content">
 <div class="page-title page-title-small">
-<h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>Paramètre</h2>
+<h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>Contact</h2>
 <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
 </div>
 <div class="card header-card shape-rounded" data-card-height="150">
@@ -40,7 +40,7 @@
   <span class="badge bg-highlight color-white">Appeler nous</span>
   <i class="fa fa-angle-right"></i>
   </a>
-  <a href="assohoustephane@gmail.com">
+  <a href="mailto:assohoustephane@gmail.com">
   <i class="fa font-14 fa-envelope color-mail"></i>
   <span>assohoustephane@gmail.com</span>
   <span class="badge bg-highlight color-white">email</span>
