--- a/src/app/client/telechargement/telechargement.component.html
+++ b/src/app/client/telechargement/telechargement.component.html
@@ -6,7 +6,7 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="/blog"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+    <a href="/contact"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
     <a href="/telechargement"  class="active-nav"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
     <a href="/"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
