--- a/src/app/client/formation/formation.component.html
+++ b/src/app/client/formation/formation.component.html
@@ -45,7 +45,7 @@
       <div class="card card-style">
       <img src="assets/images/L_SAGE_Bright_Green4.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="/formation/sage-comptabilite" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="/formation/sage-comptabilite" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
       </div>
       </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="card card-style">
       <img src="assets/images/word.jpg" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="#0" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Indisponible</a></p>
+      <p><a href="#0" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Indisponible</a></p>
       </div>
       </div>
       </div>
@@ -104,3 +104,4 @@
 </div>
 <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-settings" data-menu-effect="menu-over">
 </div>
+{{div}}
