--- a/src/app/client/parametre/parametre.component.html
+++ b/src/app/client/parametre/parametre.component.html
@@ -1,3 +1,4 @@
+<div id="page">
 <div class="header header-fixed header-auto-show header-logo-app">
   <a href="#0" class="header-title">AMS</a>
   <a href="#" data-menu="menu-main" class="header-icon header-icon-1"><i class="fas fa-bars"></i></a>
@@ -14,7 +15,7 @@
     </div>
 <div class="page-content">
 <div class="page-title page-title-small">
-<h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>Paramètre</h2>
+<h2><a href="#" class="back-button"><i class="fa fa-arrow-left"></i></a>Paramètre</h2>
 <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
 </div>
 <div class="card header-card shape-rounded" data-card-height="210">
@@ -68,6 +69,7 @@
 <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-settings" data-menu-effect="menu-over">
 </div>
 
+</div>
 
 
-
+{{div}}
