--- a/src/app/client/telechargement/sage-comptabilite/sage-comptabilite.component.html
+++ b/src/app/client/telechargement/sage-comptabilite/sage-comptabilite.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="page-content">
       <div class="page-title page-title-small">
-      <h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>{{title}}</h2>
+      <h2><a href="/telechargement" ><i class="fa fa-arrow-left"></i></a>{{title}}</h2>
       <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
       </div>
       <div class="card header-card shape-rounded" data-card-height="150">
@@ -35,7 +35,7 @@
 
   <div class="card card-style">
   <div class="content">
-  <h3>Apropos de {{title}}</h3>
+  <h3>A propos de {{title}}</h3>
   <p>
    {{apropos}}
   </p>
@@ -113,3 +113,4 @@
 </div>
 <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-settings" data-menu-effect="menu-over">
 </div>
+{{div}}
