--- a/src/app/client/telechargement/telechargement.component.html
+++ b/src/app/client/telechargement/telechargement.component.html
@@ -1,3 +1,4 @@
+
 <div class="header header-fixed header-auto-show header-logo-app">
   <a href="#0" class="header-title">AMS</a>
   <a href="#" data-menu="menu-main" class="header-icon header-icon-1"><i class="fas fa-bars"></i></a>
@@ -6,7 +7,7 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="/contact"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+    <a href="/contact"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
     <a href="/telechargement"  class="active-nav"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
     <a href="/"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
@@ -53,6 +54,18 @@
         <strong>Logiciel</strong>
         <i class="fa fa-angle-right mr-2"></i>
         </a>
+        <a href="/telechargement/photoshop" data-filter-item data-filter-name="adobe photoshop">
+          <i class="fa fa-file color-gray2-dark font-17"></i>
+          <span>Adobe Photoshop</span>
+          <strong>Logiciel</strong>
+          <i class="fa fa-angle-right mr-2"></i>
+          </a>
+ <a href="/telechargement/premierepro" data-filter-item data-filter-name="adobe premiere pro">
+ <i class="fa fa-file color-gray2-dark font-17"></i>
+  <span>Adobe Première Pro 2020</span>
+  <strong>Logiciel</strong>
+  <i class="fa fa-angle-right mr-2"></i>
+  </a>
   </div>
   </div>
   </div>
@@ -62,7 +75,7 @@
       <div class="card card-style">
       <img src="assets/images/L_SAGE_Bright_Green4.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="/telechargement/sage-comptabilite" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="/telechargement/sage-comptabilite" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
       </div>
       </div>
       </div>
@@ -70,7 +83,7 @@
       <div class="card card-style">
       <img src="assets/images/L_SAGE_Bright_Green3.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="/telechargement/sage-gestion-commerciale" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="/telechargement/sage-gestion-commerciale" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
       </div>
       </div>
       </div>
@@ -81,7 +94,7 @@
       <div class="card card-style">
       <img src="assets/images/paie.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="/telechargement/sage-paie" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="/telechargement/sage-paie" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
       </div>
       </div>
       </div>
@@ -89,45 +102,49 @@
       <div class="card card-style">
       <img src="assets/images/immm.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="#" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
       </div>
       </div>
       </div>
   </div>
 
+  <div class="row mb-0">
+    <div class="col-6 pr-0">
+    <div class="card card-style">
+    <img src="assets/images/photoshop.jpg" class="img-fluid">
+    <div class="content pb-0">
+    <p><a href="/telechargement/photoshop" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+    </div>
+    </div>
+    </div>
+    <div class="col-6 pl-0">
+    <div class="card card-style">
+    <img src="assets/images/premierepro.jpg" class="img-fluid">
+    <div class="content pb-0">
+    <p><a href="/telechargement/premierepro" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+    </div>
+    </div>
+    </div>
+</div>
+
   <div class="divider divider-margins"></div>
   <div class="content mb-3">
-  <h5 class="float-left font-16 font-500">Browse Our Categories</h5>
-  <a class="float-right font-12 color-highlight mt-n1" href="#">View All</a>
-  <div class="clearfix"></div>
-  </div>
-  <a href="#" data-card-height="80" class="card card-style mb-3">
-  <div class="card-center">
-  <h5 class="pl-3">Mobile PWA's</h5>
-  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
-  </div>
-  <div class="card-center opacity-30">
-  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-  </div>
-  </a>
-  <a href="#" data-card-height="80" class="card card-style mb-3">
-  <div class="card-center">
-  <h5 class="pl-3">Site Templates</h5>
-  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
-  </div>
-  <div class="card-center opacity-30">
-  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-  </div>
-  </a>
-  <a href="#" data-card-height="80" class="card card-style mb-4">
-  <div class="card-center">
-  <h5 class="pl-3">Web Themes</h5>
-  <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Focus on your Projects</p>
-  </div>
-  <div class="card-center opacity-30">
-  <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
-  </div>
-  </a>
+    <h5 class="float-left font-16 font-500">Categories</h5>
+    <a class="float-right font-12 color-highlight mt-n1" href="#">Voir tout</a>
+    <div class="clearfix"></div>
+    </div>
+    <a href="#" data-card-height="80" class="card card-style mb-3">
+    <div class="card-center">
+    <h5 class="pl-3">Sage</h5>
+    <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
+    </div>
+    <div class="card-center opacity-30">
+    <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+    </div>
+    </a>
+
+
+
   <div class="divider divider-margins"></div>
   <div class="footer" data-menu-load="assets/menu-footer.html"></div>
 </div>
@@ -138,3 +155,5 @@
 </div>
 <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-settings" data-menu-effect="menu-over">
 </div>
+{{div}}
+
