--- a/src/app/authentification/register/register.component.html
+++ b/src/app/authentification/register/register.component.html
@@ -14,7 +14,7 @@
     </div>
 <div class="page-content">
 <div class="page-title page-title-small">
-<h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>Paramètre</h2>
+<h2><a href="#" class="back-button"><i class="fa fa-arrow-left"></i></a>Paramètre</h2>
 <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
 </div>
 
