--- a/src/app/client/contact/contact.component.html
+++ b/src/app/client/contact/contact.component.html
@@ -14,7 +14,7 @@
     </div>
 <div class="page-content">
 <div class="page-title page-title-small">
-<h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>Contact</h2>
+<h2><a href="/"><i class="fa fa-arrow-left"></i></a>Contact</h2>
 <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
 </div>
 <div class="card header-card shape-rounded" data-card-height="150">
