--- a/src/app/client/telechargement/telechargement.component.html
+++ b/src/app/client/telechargement/telechargement.component.html
@@ -126,6 +126,25 @@
     </div>
     </div>
 </div>
+<div class="row mb-0">
+  <div class="col-6 pr-0">
+  <div class="card card-style">
+  <img src="assets/images/acrobat.png" class="img-fluid">
+  <div class="content pb-0">
+  <p><a href="/telechargement/acrobat" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+  </div>
+  </div>
+  </div>
+  <div class="col-6 pl-0">
+  <div class="card card-style">
+  <img src="assets/images/animate.jpg" class="img-fluid">
+  <div class="content pb-0">
+  <p><a href="/telechargement/animate" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Voir</a></p>
+  </div>
+  </div>
+  </div>
+</div>
+
 
   <div class="divider divider-margins"></div>
   <div class="content mb-3">
@@ -136,6 +155,15 @@
     <a href="#" data-card-height="80" class="card card-style mb-3">
     <div class="card-center">
     <h5 class="pl-3">Sage</h5>
+    <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
+    </div>
+    <div class="card-center opacity-30">
+    <i class="fa fa-arrow-right opacity-50 float-right color-theme pr-3"></i>
+    </div>
+    </a>
+    <a href="/telechargement/categories/adobe" data-card-height="80" class="card card-style mb-3">
+    <div class="card-center">
+    <h5 class="pl-3">Adobe</h5>
     <p class="pl-3 mt-n2 font-12 color-highlight mb-0">Nouveau</p>
     </div>
     <div class="card-center opacity-30">
