integration de la connexion

--- a/src/app/client/accueil/accueil.component.html
+++ b/src/app/client/accueil/accueil.component.html
@@ -82,7 +82,23 @@
   </div>
   </div>
 
+  <div id="manual-mode-detected" class="card card-style">
+    <div class="content mb-4">
 
+
+    <div class="d-flex">
+    <div class="pt-1">
+    <h5 data-activate="toggle-dark" class="font-600">Theme Sombre</h5>
+    </div>
+    <div class="ml-auto mr-4 pr-2">
+    <div class="custom-control ios-switch">
+    <input data-toast="switched-color-scheme" data-toggle-theme-switch type="checkbox" class="ios-input" id="toggle-dark">
+    <label class="custom-control-label" for="toggle-dark"></label>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
   <div class="card card-style">
     <div class="content text-center">
     <h2>Connaitre ces trois etapes</h2>
@@ -114,6 +130,7 @@
     </p>
     </div>
     </div>
+
     <div class="d-flex mb-2">
     <div>
     <i class="far fa-check-circle color-green1-dark fa-3x pt-3 icon-size"></i>
